# protoMOMxx

./: .gitignore  CMakeLists.txt  build.sh  build_and_run.sh  build_and_run_derecho.sh  create_env.sh
.github/workflows/: unit-tests.yaml
cmake/: protomomtarget.cmake
config_src/drivers/solo_driver/: CMakeLists.txt  MOM_driver.cpp
src/core/: CMakeLists.txt  MOM.cpp  MOM.h
